# Python-Portfolio

./: README.md
Py-BlockChain/: main.py
Py-ML/: README.md
Py-ML/First Ever ML/: First.py  README.md
PyLogin/: PyLogin.py  README (copy).md  README.md
Soduku Solver/: README.md  main.py
StableMatch/: README.md  match.py
TelegramBot/: keep_alive.py  main.py  pyproject.toml
Text Analyzer/: README.md  app.py  words.txt
Twitter API/: README.md  tweets.csv  twitter_api.py
