[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.7.9"
yfinance = "^0.1.59"
importlib-metadata = "^4.5.0"
docutils = "^0.17.1"
wincertstore = "^0.2"
cython = "^0.29.23"
monotonic = "^1.6"
keyring = "^23.0.1"
python-ntlm = "^1.1.0"
lxml = "^4.6.3"
cryptography = "^3.4.7"
ordereddict = "^1.1"
htmlparser = "^0.0.2"
lockfile = "^0.12.2"
zipp = "^3.4.1"
tornado = "^6.1"
brotli = "^1.0.9"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
